Renaming atom-scss-ui-snippets to scss-element-ui-snippets

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "atom-scss-ui-snippets",
+  "name": "scss-element-ui-snippets",
   "version": "0.1.0",
   "description": "Scss ui snippets",
   "repository": {
